--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,14 +5,16 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-
+<display-name>
+VEARD
+</display-name>
 <servlet>
 	<servlet-name>VEARD Editor REST Service</servlet-name>
 	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 	<init-param>
 		<param-name>jersey.config.server.provider.packages</param-name>
 		<param-value>es.uca.veard.editor</param-value>
-		<param-value>es.uca.veard.viewer</param-value>
+		<!--param-value>es.uca.veard.viewer</param-value-->
 	</init-param>
 	<load-on-startup>1</load-on-startup>
 </servlet>
