--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,12 +4,12 @@
 xmlns="http://java.sun.com/xml/ns/javaee" 
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="VEARD" version="3.0">
 <display-name>
 VEARD
 </display-name>
 <servlet>
-	<servlet-name>VEARD Editor REST Service</servlet-name>
+	<servlet-name>VEARDEditorRESTService</servlet-name>
 	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 	<init-param>
 		<param-name>jersey.config.server.provider.packages</param-name>
@@ -19,7 +19,7 @@ VEARD
 	<load-on-startup>1</load-on-startup>
 </servlet>
 <servlet-mapping>
-	<servlet-name>VEARD Editor REST Service</servlet-name>
+	<servlet-name>VEARDEditorRESTService</servlet-name>
 	<url-pattern>/rest/*</url-pattern>
 </servlet-mapping>
 </web-app>
