--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,7 +13,7 @@ VEARD
 	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 	<init-param>
 		<param-name>jersey.config.server.provider.packages</param-name>
-		<param-value>es.uca.veard.editor</param-value>
+		<param-value>es.uca.veard.rest</param-value>
 		<!--param-value>es.uca.veard.viewer</param-value-->
 	</init-param>
 	<load-on-startup>1</load-on-startup>
