--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,21 +5,25 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 id="VEARD" version="3.0">
-<display-name>
-VEARD
-</display-name>
-<servlet>
-	<servlet-name>VEARDEditorRESTService</servlet-name>
-	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-	<init-param>
-		<param-name>jersey.config.server.provider.packages</param-name>
-		<param-value>es.uca.veard.rest</param-value>
-		<!--param-value>es.uca.veard.viewer</param-value-->
-	</init-param>
-	<load-on-startup>1</load-on-startup>
-</servlet>
-<servlet-mapping>
-	<servlet-name>VEARDEditorRESTService</servlet-name>
-	<url-pattern>/rest/*</url-pattern>
-</servlet-mapping>
+    <display-name>
+        VEARD
+    </display-name>
+    <context-param>
+        <param-name>filestorage</param-name>
+        <param-value>/home/veard/userdata/</param-value>
+    </context-param>
+    <servlet>
+        <servlet-name>VEARDEditorRESTService</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>es.uca.veard.rest</param-value>
+            <!--param-value>es.uca.veard.viewer</param-value-->
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>VEARDEditorRESTService</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
