--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,10 +8,6 @@ id="VEARD" version="3.0">
     <display-name>
         VEARD
     </display-name>
-    <context-param>
-        <param-name>filestorage</param-name>
-        <param-value>/home/veard/userdata/</param-value>
-    </context-param>
     <servlet>
         <servlet-name>VEARDEditorRESTService</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -22,7 +18,7 @@ id="VEARD" version="3.0">
         </init-param>
         <init-param>
             <param-name>filestorage</param-name>
-            <param-value>/home/veard/userdata/</param-value>
+            <param-value>/userdata/</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
