--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,14 +18,30 @@ id="VEARD" version="3.0">
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>es.uca.veard.rest</param-value>
-            <!--param-value>es.uca.veard.viewer</param-value-->
         </init-param>
+        
+        <!-- Parameters for REST service configuration -->
         <init-param>
             <param-name>filestorage</param-name>
             <param-value>/userdata/</param-value>
         </init-param>
+        <init-param>
+            <param-name>modelstorage</param-name>
+            <param-value>models/</param-value>
+        </init-param>
+        <init-param>
+            <param-name>imagestorage</param-name>
+            <param-value>images/</param-value>
+        </init-param>
+        <init-param>
+            <param-name>logfilename</param-name>
+            <param-value>log</param-value>
+        </init-param>
+        
+        
         <load-on-startup>1</load-on-startup>
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>VEARDEditorRESTService</servlet-name>
         <url-pattern>/rest/*</url-pattern>
