Adding log capabilities to the REST service

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -47,7 +47,7 @@ id="VEARD" version="3.0">
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
     
-    <listener>
+    <!--listener>
         <listener-class>es.uca.veard.listener</listener-class>
-   </listener>
+   </listener-->
 </web-app>
