Fixing JavaScript and Project loading

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,10 @@ id="VEARD" version="3.0">
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>es.uca.veard.rest</param-value>
         </init-param>
+        <init-param>
+            <param-name>listings</param-name>
+            <param-value>true</param-value>
+        </init-param>
         
         <load-on-startup>1</load-on-startup>
     </servlet>
